RESOLVED FIXED116547
REGRESSION(r101810): Media controls status text missing for live-stream videos.
https://bugs.webkit.org/show_bug.cgi?id=116547
Summary REGRESSION(r101810): Media controls status text missing for live-stream videos.
Jer Noble
Reported 2013-05-21 09:02:07 PDT
REGRESSION(r101810): Media controls status text missing for live-stream videos.
Attachments
Patch (1.49 KB, patch)
2013-05-21 09:03 PDT, Jer Noble
eric.carlson: review+
Jer Noble
Comment 1 2013-05-21 09:03:52 PDT
Jer Noble
Comment 2 2013-05-21 10:19:32 PDT
Jer Noble
Comment 3 2013-05-21 10:19:51 PDT
Note You need to log in before you can comment on or make changes to this bug.