REGRESSION(r101810): Media controls status text missing for live-stream videos. https://bugs.webkit.org/show_bug.cgi?id=116547

Reviewed by Eric Carlson.

Un-reverse the logic in loadedMetadata() so that the status text isn't
hidden (when it should be shown) for live-stream videos.

* html/shadow/MediaControlsApple.cpp:
(WebCore::MediaControlsApple::loadedMetadata):

Canonical link: https://commits.webkit.org/134859@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150454 268f45cc-cd09-0410-ab3c-d52691b4dbfc